--- a/nav.html
+++ b/nav.html
@@ -27,17 +27,82 @@
     </header>
 
     <div class="container">
-      <main>
+      <main role="main">
+        <article class="article-feature">
+          <h2 class="article-title"></h2>
+          <img src="" alt="" class="article-image" />
+          <p class="article-info"></p>
+          <p class="article-body"></p>
+          <a href="#" class="article-read-more"></a>
+        </article>
 
+        <article class="article-recent">
+          <div class="article-recent-main">
+            <h2 class="article-title"></h2>
+            <p class="article-body"></p>
+            <a href="#" class="article-read-more"></a>
+          </div>
+          <div class="article-recent-secondary">
+            <img src="" alt="" class="article-image" />
+            <p class="article-info"></p>
+          </div>
+        </article>
+
+        <article class="article-recent">
+          <div class="article-recent-main">
+            <h2 class="article-title"></h2>
+            <p class="article-body"></p>
+            <a href="#" class="article-read-more"></a>
+          </div>
+          <div class="article-recent-secondary">
+            <img src="" alt="" class="article-image" />
+            <p class="article-info"></p>
+          </div>
+        </article>
+
+        <article class="article-recent">
+          <div class="article-recent-main">
+            <h2 class="article-title"></h2>
+            <p class="article-body"></p>
+            <a href="#" class="article-read-more"></a>
+          </div>
+          <div class="article-recent-secondary">
+            <img src="" alt="" class="article-image" />
+            <p class="article-info"></p>
+          </div>
+        </article>
       </main>
-      <aside>
-        
+
+      <aside class="sidebar">
+        <div class="sidebar-widget">
+          <h2 class="widget-title"></h2>
+          <img src="" alt="" class="widget-imgae" />
+          <p class="widget-body"></p>
+        </div>
+
+        <div class="sidebar-widget">
+          <h2 class="widget-title"></h2>
+          <div class="widget-recent-post">
+            <h3 class="widget-recent-post-title"></h3>
+            <img src="" alt="" class="widget-imgae" />
+          </div>
+
+          <div class="widget-recent-post">
+            <h3 class="widget-recent-post-title"></h3>
+            <img src="" alt="" class="widget-imgae" />
+          </div>
+
+          <div class="widget-recent-post">
+            <h3 class="widget-recent-post-title"></h3>
+            <img src="" alt="" class="widget-imgae" />
+          </div>
+        </div>
       </aside>
     </div>
-  </body>
 
-  <footer>
-    <p></p>
-    <p></p>
-  </footer>
+    <footer>
+      <p></p>
+      <p></p>
+    </footer>
+  </body>
 </html>
